AS/TD/td9/exp-tpc.output
Terminaux inutilisés dans la grammaire

    VOID
    ELSE


Grammaire

    0 $accept: SuiteInstr $end

    1 SuiteInstr: SuiteInstr Instr
    2           | %empty

    3 Instr: LValue '=' Exp ';'
    4      | IF '(' Exp ')' Instr
    5      | WHILE '(' Exp ')' Instr
    6      | IDENT '(' Arguments ')' ';'
    7      | RETURN Exp ';'
    8      | RETURN ';'
    9      | '{' SuiteInstr '}'
   10      | ';'

   11 Exp: Exp OR TB
   12    | TB

   13 TB: TB AND FB
   14   | FB

   15 FB: FB EQ M
   16   | M

   17 M: M ORDER E
   18  | E

   19 E: E ADDSUB T
   20  | T

   21 T: T DIVSTAR F
   22  | F

   23 F: ADDSUB F
   24  | '!' F
   25  | '(' Exp ')'
   26  | NUM
   27  | CHARACTER
   28  | LValue
   29  | IDENT '(' Arguments ')'
   30  | '(' error ')'
   31  | IDENT '(' error ')'

   32 LValue: IDENT

   33 Arguments: ListExp
   34          | %empty

   35 ListExp: ListExp ',' Exp
   36        | Exp
   37        | error ',' Exp


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    '!' (33) 24
    '(' (40) 4 5 6 25 29 30 31
    ')' (41) 4 5 6 25 29 30 31
    ',' (44) 35 37
    ';' (59) 3 6 7 8 10
    '=' (61) 3
    '{' (123) 9
    '}' (125) 9
    error (256) 30 31 37
    CHARACTER <byte> (258) 27
    ADDSUB <byte> (259) 19 23
    DIVSTAR <byte> (260) 21
    NUM <num> (261) 26
    IDENT <ident> (262) 6 29 31 32
    ORDER <comp> (263) 17
    EQ <comp> (264) 15
    OR (265) 11
    AND (266) 13
    IF (267) 4
    WHILE (268) 5
    RETURN (269) 7 8
    VOID (270)
    ELSE (271)


Non-terminaux, suivis des règles où ils apparaissent

    $accept (25)
        à gauche: 0
    SuiteInstr (26)
        à gauche: 1 2
        à droite: 0 1 9
    Instr (27)
        à gauche: 3 4 5 6 7 8 9 10
        à droite: 1 4 5
    Exp (28)
        à gauche: 11 12
        à droite: 3 4 5 7 11 25 35 36 37
    TB (29)
        à gauche: 13 14
        à droite: 11 12 13
    FB (30)
        à gauche: 15 16
        à droite: 13 14 15
    M (31)
        à gauche: 17 18
        à droite: 15 16 17
    E (32)
        à gauche: 19 20
        à droite: 17 18 19
    T (33)
        à gauche: 21 22
        à droite: 19 20 21
    F (34)
        à gauche: 23 24 25 26 27 28 29 30 31
        à droite: 21 22 23 24
    LValue (35)
        à gauche: 32
        à droite: 3 28
    Arguments (36)
        à gauche: 33 34
        à droite: 6 29
    ListExp (37)
        à gauche: 35 36 37
        à droite: 33 35


État 0

    0 $accept: . SuiteInstr $end
    1 SuiteInstr: . SuiteInstr Instr
    2           | . %empty

    $défaut  réduction par utilisation de la règle 2 (SuiteInstr)

    SuiteInstr  aller à l'état 1


État 1

    0 $accept: SuiteInstr . $end
    1 SuiteInstr: SuiteInstr . Instr
    3 Instr: . LValue '=' Exp ';'
    4      | . IF '(' Exp ')' Instr
    5      | . WHILE '(' Exp ')' Instr
    6      | . IDENT '(' Arguments ')' ';'
    7      | . RETURN Exp ';'
    8      | . RETURN ';'
    9      | . '{' SuiteInstr '}'
   10      | . ';'
   32 LValue: . IDENT

    $end    décalage et aller à l'état 2
    IDENT   décalage et aller à l'état 3
    IF      décalage et aller à l'état 4
    WHILE   décalage et aller à l'état 5
    RETURN  décalage et aller à l'état 6
    ';'     décalage et aller à l'état 7
    '{'     décalage et aller à l'état 8

    Instr   aller à l'état 9
    LValue  aller à l'état 10


État 2

    0 $accept: SuiteInstr $end .

    $défaut  accepter


État 3

    6 Instr: IDENT . '(' Arguments ')' ';'
   32 LValue: IDENT .  ['=']

    '('  décalage et aller à l'état 11

    $défaut  réduction par utilisation de la règle 32 (LValue)


État 4

    4 Instr: IF . '(' Exp ')' Instr

    '('  décalage et aller à l'état 12


État 5

    5 Instr: WHILE . '(' Exp ')' Instr

    '('  décalage et aller à l'état 13


État 6

    7 Instr: RETURN . Exp ';'
    8      | RETURN . ';'
   11 Exp: . Exp OR TB
   12    | . TB
   13 TB: . TB AND FB
   14   | . FB
   15 FB: . FB EQ M
   16   | . M
   17 M: . M ORDER E
   18  | . E
   19 E: . E ADDSUB T
   20  | . T
   21 T: . T DIVSTAR F
   22  | . F
   23 F: . ADDSUB F
   24  | . '!' F
   25  | . '(' Exp ')'
   26  | . NUM
   27  | . CHARACTER
   28  | . LValue
   29  | . IDENT '(' Arguments ')'
   30  | . '(' error ')'
   31  | . IDENT '(' error ')'
   32 LValue: . IDENT

    CHARACTER  décalage et aller à l'état 14
    ADDSUB     décalage et aller à l'état 15
    NUM        décalage et aller à l'état 16
    IDENT      décalage et aller à l'état 17
    ';'        décalage et aller à l'état 18
    '('        décalage et aller à l'état 19
    '!'        décalage et aller à l'état 20

    Exp     aller à l'état 21
    TB      aller à l'état 22
    FB      aller à l'état 23
    M       aller à l'état 24
    E       aller à l'état 25
    T       aller à l'état 26
    F       aller à l'état 27
    LValue  aller à l'état 28


État 7

   10 Instr: ';' .

    $défaut  réduction par utilisation de la règle 10 (Instr)


État 8

    1 SuiteInstr: . SuiteInstr Instr
    2           | . %empty
    9 Instr: '{' . SuiteInstr '}'

    $défaut  réduction par utilisation de la règle 2 (SuiteInstr)

    SuiteInstr  aller à l'état 29


État 9

    1 SuiteInstr: SuiteInstr Instr .

    $défaut  réduction par utilisation de la règle 1 (SuiteInstr)


État 10

    3 Instr: LValue . '=' Exp ';'

    '='  décalage et aller à l'état 30


État 11

    6 Instr: IDENT '(' . Arguments ')' ';'
   11 Exp: . Exp OR TB
   12    | . TB
   13 TB: . TB AND FB
   14   | . FB
   15 FB: . FB EQ M
   16   | . M
   17 M: . M ORDER E
   18  | . E
   19 E: . E ADDSUB T
   20  | . T
   21 T: . T DIVSTAR F
   22  | . F
   23 F: . ADDSUB F
   24  | . '!' F
   25  | . '(' Exp ')'
   26  | . NUM
   27  | . CHARACTER
   28  | . LValue
   29  | . IDENT '(' Arguments ')'
   30  | . '(' error ')'
   31  | . IDENT '(' error ')'
   32 LValue: . IDENT
   33 Arguments: . ListExp
   34          | . %empty  [')']
   35 ListExp: . ListExp ',' Exp
   36        | . Exp
   37        | . error ',' Exp

    error      décalage et aller à l'état 31
    CHARACTER  décalage et aller à l'état 14
    ADDSUB     décalage et aller à l'état 15
    NUM        décalage et aller à l'état 16
    IDENT      décalage et aller à l'état 17
    '('        décalage et aller à l'état 19
    '!'        décalage et aller à l'état 20

    ')'  réduction par utilisation de la règle 34 (Arguments)

    Exp        aller à l'état 32
    TB         aller à l'état 22
    FB         aller à l'état 23
    M          aller à l'état 24
    E          aller à l'état 25
    T          aller à l'état 26
    F          aller à l'état 27
    LValue     aller à l'état 28
    Arguments  aller à l'état 33
    ListExp    aller à l'état 34


État 12

    4 Instr: IF '(' . Exp ')' Instr
   11 Exp: . Exp OR TB
   12    | . TB
   13 TB: . TB AND FB
   14   | . FB
   15 FB: . FB EQ M
   16   | . M
   17 M: . M ORDER E
   18  | . E
   19 E: . E ADDSUB T
   20  | . T
   21 T: . T DIVSTAR F
   22  | . F
   23 F: . ADDSUB F
   24  | . '!' F
   25  | . '(' Exp ')'
   26  | . NUM
   27  | . CHARACTER
   28  | . LValue
   29  | . IDENT '(' Arguments ')'
   30  | . '(' error ')'
   31  | . IDENT '(' error ')'
   32 LValue: . IDENT

    CHARACTER  décalage et aller à l'état 14
    ADDSUB     décalage et aller à l'état 15
    NUM        décalage et aller à l'état 16
    IDENT      décalage et aller à l'état 17
    '('        décalage et aller à l'état 19
    '!'        décalage et aller à l'état 20

    Exp     aller à l'état 35
    TB      aller à l'état 22
    FB      aller à l'état 23
    M       aller à l'état 24
    E       aller à l'état 25
    T       aller à l'état 26
    F       aller à l'état 27
    LValue  aller à l'état 28


État 13

    5 Instr: WHILE '(' . Exp ')' Instr
   11 Exp: . Exp OR TB
   12    | . TB
   13 TB: . TB AND FB
   14   | . FB
   15 FB: . FB EQ M
   16   | . M
   17 M: . M ORDER E
   18  | . E
   19 E: . E ADDSUB T
   20  | . T
   21 T: . T DIVSTAR F
   22  | . F
   23 F: . ADDSUB F
   24  | . '!' F
   25  | . '(' Exp ')'
   26  | . NUM
   27  | . CHARACTER
   28  | . LValue
   29  | . IDENT '(' Arguments ')'
   30  | . '(' error ')'
   31  | . IDENT '(' error ')'
   32 LValue: . IDENT

    CHARACTER  décalage et aller à l'état 14
    ADDSUB     décalage et aller à l'état 15
    NUM        décalage et aller à l'état 16
    IDENT      décalage et aller à l'état 17
    '('        décalage et aller à l'état 19
    '!'        décalage et aller à l'état 20

    Exp     aller à l'état 36
    TB      aller à l'état 22
    FB      aller à l'état 23
    M       aller à l'état 24
    E       aller à l'état 25
    T       aller à l'état 26
    F       aller à l'état 27
    LValue  aller à l'état 28


État 14

   27 F: CHARACTER .

    $défaut  réduction par utilisation de la règle 27 (F)


État 15

   23 F: . ADDSUB F
   23  | ADDSUB . F
   24  | . '!' F
   25  | . '(' Exp ')'
   26  | . NUM
   27  | . CHARACTER
   28  | . LValue
   29  | . IDENT '(' Arguments ')'
   30  | . '(' error ')'
   31  | . IDENT '(' error ')'
   32 LValue: . IDENT

    CHARACTER  décalage et aller à l'état 14
    ADDSUB     décalage et aller à l'état 15
    NUM        décalage et aller à l'état 16
    IDENT      décalage et aller à l'état 17
    '('        décalage et aller à l'état 19
    '!'        décalage et aller à l'état 20

    F       aller à l'état 37
    LValue  aller à l'état 28


État 16

   26 F: NUM .

    $défaut  réduction par utilisation de la règle 26 (F)


État 17

   29 F: IDENT . '(' Arguments ')'
   31  | IDENT . '(' error ')'
   32 LValue: IDENT .  [ADDSUB, DIVSTAR, ORDER, EQ, OR, AND, ';', ')', ',']

    '('  décalage et aller à l'état 38

    $défaut  réduction par utilisation de la règle 32 (LValue)


État 18

    8 Instr: RETURN ';' .

    $défaut  réduction par utilisation de la règle 8 (Instr)


État 19

   11 Exp: . Exp OR TB
   12    | . TB
   13 TB: . TB AND FB
   14   | . FB
   15 FB: . FB EQ M
   16   | . M
   17 M: . M ORDER E
   18  | . E
   19 E: . E ADDSUB T
   20  | . T
   21 T: . T DIVSTAR F
   22  | . F
   23 F: . ADDSUB F
   24  | . '!' F
   25  | . '(' Exp ')'
   25  | '(' . Exp ')'
   26  | . NUM
   27  | . CHARACTER
   28  | . LValue
   29  | . IDENT '(' Arguments ')'
   30  | . '(' error ')'
   30  | '(' . error ')'
   31  | . IDENT '(' error ')'
   32 LValue: . IDENT

    error      décalage et aller à l'état 39
    CHARACTER  décalage et aller à l'état 14
    ADDSUB     décalage et aller à l'état 15
    NUM        décalage et aller à l'état 16
    IDENT      décalage et aller à l'état 17
    '('        décalage et aller à l'état 19
    '!'        décalage et aller à l'état 20

    Exp     aller à l'état 40
    TB      aller à l'état 22
    FB      aller à l'état 23
    M       aller à l'état 24
    E       aller à l'état 25
    T       aller à l'état 26
    F       aller à l'état 27
    LValue  aller à l'état 28


État 20

   23 F: . ADDSUB F
   24  | . '!' F
   24  | '!' . F
   25  | . '(' Exp ')'
   26  | . NUM
   27  | . CHARACTER
   28  | . LValue
   29  | . IDENT '(' Arguments ')'
   30  | . '(' error ')'
   31  | . IDENT '(' error ')'
   32 LValue: . IDENT

    CHARACTER  décalage et aller à l'état 14
    ADDSUB     décalage et aller à l'état 15
    NUM        décalage et aller à l'état 16
    IDENT      décalage et aller à l'état 17
    '('        décalage et aller à l'état 19
    '!'        décalage et aller à l'état 20

    F       aller à l'état 41
    LValue  aller à l'état 28


État 21

    7 Instr: RETURN Exp . ';'
   11 Exp: Exp . OR TB

    OR   décalage et aller à l'état 42
    ';'  décalage et aller à l'état 43


État 22

   12 Exp: TB .  [OR, ';', ')', ',']
   13 TB: TB . AND FB

    AND  décalage et aller à l'état 44

    $défaut  réduction par utilisation de la règle 12 (Exp)


État 23

   14 TB: FB .  [OR, AND, ';', ')', ',']
   15 FB: FB . EQ M

    EQ  décalage et aller à l'état 45

    $défaut  réduction par utilisation de la règle 14 (TB)


État 24

   16 FB: M .  [EQ, OR, AND, ';', ')', ',']
   17 M: M . ORDER E

    ORDER  décalage et aller à l'état 46

    $défaut  réduction par utilisation de la règle 16 (FB)


État 25

   18 M: E .  [ORDER, EQ, OR, AND, ';', ')', ',']
   19 E: E . ADDSUB T

    ADDSUB  décalage et aller à l'état 47

    $défaut  réduction par utilisation de la règle 18 (M)


État 26

   20 E: T .  [ADDSUB, ORDER, EQ, OR, AND, ';', ')', ',']
   21 T: T . DIVSTAR F

    DIVSTAR  décalage et aller à l'état 48

    $défaut  réduction par utilisation de la règle 20 (E)


État 27

   22 T: F .

    $défaut  réduction par utilisation de la règle 22 (T)


État 28

   28 F: LValue .

    $défaut  réduction par utilisation de la règle 28 (F)


État 29

    1 SuiteInstr: SuiteInstr . Instr
    3 Instr: . LValue '=' Exp ';'
    4      | . IF '(' Exp ')' Instr
    5      | . WHILE '(' Exp ')' Instr
    6      | . IDENT '(' Arguments ')' ';'
    7      | . RETURN Exp ';'
    8      | . RETURN ';'
    9      | . '{' SuiteInstr '}'
    9      | '{' SuiteInstr . '}'
   10      | . ';'
   32 LValue: . IDENT

    IDENT   décalage et aller à l'état 3
    IF      décalage et aller à l'état 4
    WHILE   décalage et aller à l'état 5
    RETURN  décalage et aller à l'état 6
    ';'     décalage et aller à l'état 7
    '{'     décalage et aller à l'état 8
    '}'     décalage et aller à l'état 49

    Instr   aller à l'état 9
    LValue  aller à l'état 10


État 30

    3 Instr: LValue '=' . Exp ';'
   11 Exp: . Exp OR TB
   12    | . TB
   13 TB: . TB AND FB
   14   | . FB
   15 FB: . FB EQ M
   16   | . M
   17 M: . M ORDER E
   18  | . E
   19 E: . E ADDSUB T
   20  | . T
   21 T: . T DIVSTAR F
   22  | . F
   23 F: . ADDSUB F
   24  | . '!' F
   25  | . '(' Exp ')'
   26  | . NUM
   27  | . CHARACTER
   28  | . LValue
   29  | . IDENT '(' Arguments ')'
   30  | . '(' error ')'
   31  | . IDENT '(' error ')'
   32 LValue: . IDENT

    CHARACTER  décalage et aller à l'état 14
    ADDSUB     décalage et aller à l'état 15
    NUM        décalage et aller à l'état 16
    IDENT      décalage et aller à l'état 17
    '('        décalage et aller à l'état 19
    '!'        décalage et aller à l'état 20

    Exp     aller à l'état 50
    TB      aller à l'état 22
    FB      aller à l'état 23
    M       aller à l'état 24
    E       aller à l'état 25
    T       aller à l'état 26
    F       aller à l'état 27
    LValue  aller à l'état 28


État 31

   37 ListExp: error . ',' Exp

    ','  décalage et aller à l'état 51


État 32

   11 Exp: Exp . OR TB
   36 ListExp: Exp .  [')', ',']

    OR  décalage et aller à l'état 42

    $défaut  réduction par utilisation de la règle 36 (ListExp)


État 33

    6 Instr: IDENT '(' Arguments . ')' ';'

    ')'  décalage et aller à l'état 52


État 34

   33 Arguments: ListExp .  [')']
   35 ListExp: ListExp . ',' Exp

    ','  décalage et aller à l'état 53

    $défaut  réduction par utilisation de la règle 33 (Arguments)


État 35

    4 Instr: IF '(' Exp . ')' Instr
   11 Exp: Exp . OR TB

    OR   décalage et aller à l'état 42
    ')'  décalage et aller à l'état 54


État 36

    5 Instr: WHILE '(' Exp . ')' Instr
   11 Exp: Exp . OR TB

    OR   décalage et aller à l'état 42
    ')'  décalage et aller à l'état 55


État 37

   23 F: ADDSUB F .

    $défaut  réduction par utilisation de la règle 23 (F)


État 38

   11 Exp: . Exp OR TB
   12    | . TB
   13 TB: . TB AND FB
   14   | . FB
   15 FB: . FB EQ M
   16   | . M
   17 M: . M ORDER E
   18  | . E
   19 E: . E ADDSUB T
   20  | . T
   21 T: . T DIVSTAR F
   22  | . F
   23 F: . ADDSUB F
   24  | . '!' F
   25  | . '(' Exp ')'
   26  | . NUM
   27  | . CHARACTER
   28  | . LValue
   29  | . IDENT '(' Arguments ')'
   29  | IDENT '(' . Arguments ')'
   30  | . '(' error ')'
   31  | . IDENT '(' error ')'
   31  | IDENT '(' . error ')'
   32 LValue: . IDENT
   33 Arguments: . ListExp
   34          | . %empty  [')']
   35 ListExp: . ListExp ',' Exp
   36        | . Exp
   37        | . error ',' Exp

    error      décalage et aller à l'état 56
    CHARACTER  décalage et aller à l'état 14
    ADDSUB     décalage et aller à l'état 15
    NUM        décalage et aller à l'état 16
    IDENT      décalage et aller à l'état 17
    '('        décalage et aller à l'état 19
    '!'        décalage et aller à l'état 20

    ')'  réduction par utilisation de la règle 34 (Arguments)

    Exp        aller à l'état 32
    TB         aller à l'état 22
    FB         aller à l'état 23
    M          aller à l'état 24
    E          aller à l'état 25
    T          aller à l'état 26
    F          aller à l'état 27
    LValue     aller à l'état 28
    Arguments  aller à l'état 57
    ListExp    aller à l'état 34


État 39

   30 F: '(' error . ')'

    ')'  décalage et aller à l'état 58


État 40

   11 Exp: Exp . OR TB
   25 F: '(' Exp . ')'

    OR   décalage et aller à l'état 42
    ')'  décalage et aller à l'état 59


État 41

   24 F: '!' F .

    $défaut  réduction par utilisation de la règle 24 (F)


État 42

   11 Exp: Exp OR . TB
   13 TB: . TB AND FB
   14   | . FB
   15 FB: . FB EQ M
   16   | . M
   17 M: . M ORDER E
   18  | . E
   19 E: . E ADDSUB T
   20  | . T
   21 T: . T DIVSTAR F
   22  | . F
   23 F: . ADDSUB F
   24  | . '!' F
   25  | . '(' Exp ')'
   26  | . NUM
   27  | . CHARACTER
   28  | . LValue
   29  | . IDENT '(' Arguments ')'
   30  | . '(' error ')'
   31  | . IDENT '(' error ')'
   32 LValue: . IDENT

    CHARACTER  décalage et aller à l'état 14
    ADDSUB     décalage et aller à l'état 15
    NUM        décalage et aller à l'état 16
    IDENT      décalage et aller à l'état 17
    '('        décalage et aller à l'état 19
    '!'        décalage et aller à l'état 20

    TB      aller à l'état 60
    FB      aller à l'état 23
    M       aller à l'état 24
    E       aller à l'état 25
    T       aller à l'état 26
    F       aller à l'état 27
    LValue  aller à l'état 28


État 43

    7 Instr: RETURN Exp ';' .

    $défaut  réduction par utilisation de la règle 7 (Instr)


État 44

   13 TB: TB AND . FB
   15 FB: . FB EQ M
   16   | . M
   17 M: . M ORDER E
   18  | . E
   19 E: . E ADDSUB T
   20  | . T
   21 T: . T DIVSTAR F
   22  | . F
   23 F: . ADDSUB F
   24  | . '!' F
   25  | . '(' Exp ')'
   26  | . NUM
   27  | . CHARACTER
   28  | . LValue
   29  | . IDENT '(' Arguments ')'
   30  | . '(' error ')'
   31  | . IDENT '(' error ')'
   32 LValue: . IDENT

    CHARACTER  décalage et aller à l'état 14
    ADDSUB     décalage et aller à l'état 15
    NUM        décalage et aller à l'état 16
    IDENT      décalage et aller à l'état 17
    '('        décalage et aller à l'état 19
    '!'        décalage et aller à l'état 20

    FB      aller à l'état 61
    M       aller à l'état 24
    E       aller à l'état 25
    T       aller à l'état 26
    F       aller à l'état 27
    LValue  aller à l'état 28


État 45

   15 FB: FB EQ . M
   17 M: . M ORDER E
   18  | . E
   19 E: . E ADDSUB T
   20  | . T
   21 T: . T DIVSTAR F
   22  | . F
   23 F: . ADDSUB F
   24  | . '!' F
   25  | . '(' Exp ')'
   26  | . NUM
   27  | . CHARACTER
   28  | . LValue
   29  | . IDENT '(' Arguments ')'
   30  | . '(' error ')'
   31  | . IDENT '(' error ')'
   32 LValue: . IDENT

    CHARACTER  décalage et aller à l'état 14
    ADDSUB     décalage et aller à l'état 15
    NUM        décalage et aller à l'état 16
    IDENT      décalage et aller à l'état 17
    '('        décalage et aller à l'état 19
    '!'        décalage et aller à l'état 20

    M       aller à l'état 62
    E       aller à l'état 25
    T       aller à l'état 26
    F       aller à l'état 27
    LValue  aller à l'état 28


État 46

   17 M: M ORDER . E
   19 E: . E ADDSUB T
   20  | . T
   21 T: . T DIVSTAR F
   22  | . F
   23 F: . ADDSUB F
   24  | . '!' F
   25  | . '(' Exp ')'
   26  | . NUM
   27  | . CHARACTER
   28  | . LValue
   29  | . IDENT '(' Arguments ')'
   30  | . '(' error ')'
   31  | . IDENT '(' error ')'
   32 LValue: . IDENT

    CHARACTER  décalage et aller à l'état 14
    ADDSUB     décalage et aller à l'état 15
    NUM        décalage et aller à l'état 16
    IDENT      décalage et aller à l'état 17
    '('        décalage et aller à l'état 19
    '!'        décalage et aller à l'état 20

    E       aller à l'état 63
    T       aller à l'état 26
    F       aller à l'état 27
    LValue  aller à l'état 28


État 47

   19 E: E ADDSUB . T
   21 T: . T DIVSTAR F
   22  | . F
   23 F: . ADDSUB F
   24  | . '!' F
   25  | . '(' Exp ')'
   26  | . NUM
   27  | . CHARACTER
   28  | . LValue
   29  | . IDENT '(' Arguments ')'
   30  | . '(' error ')'
   31  | . IDENT '(' error ')'
   32 LValue: . IDENT

    CHARACTER  décalage et aller à l'état 14
    ADDSUB     décalage et aller à l'état 15
    NUM        décalage et aller à l'état 16
    IDENT      décalage et aller à l'état 17
    '('        décalage et aller à l'état 19
    '!'        décalage et aller à l'état 20

    T       aller à l'état 64
    F       aller à l'état 27
    LValue  aller à l'état 28


État 48

   21 T: T DIVSTAR . F
   23 F: . ADDSUB F
   24  | . '!' F
   25  | . '(' Exp ')'
   26  | . NUM
   27  | . CHARACTER
   28  | . LValue
   29  | . IDENT '(' Arguments ')'
   30  | . '(' error ')'
   31  | . IDENT '(' error ')'
   32 LValue: . IDENT

    CHARACTER  décalage et aller à l'état 14
    ADDSUB     décalage et aller à l'état 15
    NUM        décalage et aller à l'état 16
    IDENT      décalage et aller à l'état 17
    '('        décalage et aller à l'état 19
    '!'        décalage et aller à l'état 20

    F       aller à l'état 65
    LValue  aller à l'état 28


État 49

    9 Instr: '{' SuiteInstr '}' .

    $défaut  réduction par utilisation de la règle 9 (Instr)


État 50

    3 Instr: LValue '=' Exp . ';'
   11 Exp: Exp . OR TB

    OR   décalage et aller à l'état 42
    ';'  décalage et aller à l'état 66


État 51

   11 Exp: . Exp OR TB
   12    | . TB
   13 TB: . TB AND FB
   14   | . FB
   15 FB: . FB EQ M
   16   | . M
   17 M: . M ORDER E
   18  | . E
   19 E: . E ADDSUB T
   20  | . T
   21 T: . T DIVSTAR F
   22  | . F
   23 F: . ADDSUB F
   24  | . '!' F
   25  | . '(' Exp ')'
   26  | . NUM
   27  | . CHARACTER
   28  | . LValue
   29  | . IDENT '(' Arguments ')'
   30  | . '(' error ')'
   31  | . IDENT '(' error ')'
   32 LValue: . IDENT
   37 ListExp: error ',' . Exp

    CHARACTER  décalage et aller à l'état 14
    ADDSUB     décalage et aller à l'état 15
    NUM        décalage et aller à l'état 16
    IDENT      décalage et aller à l'état 17
    '('        décalage et aller à l'état 19
    '!'        décalage et aller à l'état 20

    Exp     aller à l'état 67
    TB      aller à l'état 22
    FB      aller à l'état 23
    M       aller à l'état 24
    E       aller à l'état 25
    T       aller à l'état 26
    F       aller à l'état 27
    LValue  aller à l'état 28


État 52

    6 Instr: IDENT '(' Arguments ')' . ';'

    ';'  décalage et aller à l'état 68


État 53

   11 Exp: . Exp OR TB
   12    | . TB
   13 TB: . TB AND FB
   14   | . FB
   15 FB: . FB EQ M
   16   | . M
   17 M: . M ORDER E
   18  | . E
   19 E: . E ADDSUB T
   20  | . T
   21 T: . T DIVSTAR F
   22  | . F
   23 F: . ADDSUB F
   24  | . '!' F
   25  | . '(' Exp ')'
   26  | . NUM
   27  | . CHARACTER
   28  | . LValue
   29  | . IDENT '(' Arguments ')'
   30  | . '(' error ')'
   31  | . IDENT '(' error ')'
   32 LValue: . IDENT
   35 ListExp: ListExp ',' . Exp

    CHARACTER  décalage et aller à l'état 14
    ADDSUB     décalage et aller à l'état 15
    NUM        décalage et aller à l'état 16
    IDENT      décalage et aller à l'état 17
    '('        décalage et aller à l'état 19
    '!'        décalage et aller à l'état 20

    Exp     aller à l'état 69
    TB      aller à l'état 22
    FB      aller à l'état 23
    M       aller à l'état 24
    E       aller à l'état 25
    T       aller à l'état 26
    F       aller à l'état 27
    LValue  aller à l'état 28


État 54

    3 Instr: . LValue '=' Exp ';'
    4      | . IF '(' Exp ')' Instr
    4      | IF '(' Exp ')' . Instr
    5      | . WHILE '(' Exp ')' Instr
    6      | . IDENT '(' Arguments ')' ';'
    7      | . RETURN Exp ';'
    8      | . RETURN ';'
    9      | . '{' SuiteInstr '}'
   10      | . ';'
   32 LValue: . IDENT

    IDENT   décalage et aller à l'état 3
    IF      décalage et aller à l'état 4
    WHILE   décalage et aller à l'état 5
    RETURN  décalage et aller à l'état 6
    ';'     décalage et aller à l'état 7
    '{'     décalage et aller à l'état 8

    Instr   aller à l'état 70
    LValue  aller à l'état 10


État 55

    3 Instr: . LValue '=' Exp ';'
    4      | . IF '(' Exp ')' Instr
    5      | . WHILE '(' Exp ')' Instr
    5      | WHILE '(' Exp ')' . Instr
    6      | . IDENT '(' Arguments ')' ';'
    7      | . RETURN Exp ';'
    8      | . RETURN ';'
    9      | . '{' SuiteInstr '}'
   10      | . ';'
   32 LValue: . IDENT

    IDENT   décalage et aller à l'état 3
    IF      décalage et aller à l'état 4
    WHILE   décalage et aller à l'état 5
    RETURN  décalage et aller à l'état 6
    ';'     décalage et aller à l'état 7
    '{'     décalage et aller à l'état 8

    Instr   aller à l'état 71
    LValue  aller à l'état 10


État 56

   31 F: IDENT '(' error . ')'
   37 ListExp: error . ',' Exp

    ')'  décalage et aller à l'état 72
    ','  décalage et aller à l'état 51


État 57

   29 F: IDENT '(' Arguments . ')'

    ')'  décalage et aller à l'état 73


État 58

   30 F: '(' error ')' .

    $défaut  réduction par utilisation de la règle 30 (F)


État 59

   25 F: '(' Exp ')' .

    $défaut  réduction par utilisation de la règle 25 (F)


État 60

   11 Exp: Exp OR TB .  [OR, ';', ')', ',']
   13 TB: TB . AND FB

    AND  décalage et aller à l'état 44

    $défaut  réduction par utilisation de la règle 11 (Exp)


État 61

   13 TB: TB AND FB .  [OR, AND, ';', ')', ',']
   15 FB: FB . EQ M

    EQ  décalage et aller à l'état 45

    $défaut  réduction par utilisation de la règle 13 (TB)


État 62

   15 FB: FB EQ M .  [EQ, OR, AND, ';', ')', ',']
   17 M: M . ORDER E

    ORDER  décalage et aller à l'état 46

    $défaut  réduction par utilisation de la règle 15 (FB)


État 63

   17 M: M ORDER E .  [ORDER, EQ, OR, AND, ';', ')', ',']
   19 E: E . ADDSUB T

    ADDSUB  décalage et aller à l'état 47

    $défaut  réduction par utilisation de la règle 17 (M)


État 64

   19 E: E ADDSUB T .  [ADDSUB, ORDER, EQ, OR, AND, ';', ')', ',']
   21 T: T . DIVSTAR F

    DIVSTAR  décalage et aller à l'état 48

    $défaut  réduction par utilisation de la règle 19 (E)


État 65

   21 T: T DIVSTAR F .

    $défaut  réduction par utilisation de la règle 21 (T)


État 66

    3 Instr: LValue '=' Exp ';' .

    $défaut  réduction par utilisation de la règle 3 (Instr)


État 67

   11 Exp: Exp . OR TB
   37 ListExp: error ',' Exp .  [')', ',']

    OR  décalage et aller à l'état 42

    $défaut  réduction par utilisation de la règle 37 (ListExp)


État 68

    6 Instr: IDENT '(' Arguments ')' ';' .

    $défaut  réduction par utilisation de la règle 6 (Instr)


État 69

   11 Exp: Exp . OR TB
   35 ListExp: ListExp ',' Exp .  [')', ',']

    OR  décalage et aller à l'état 42

    $défaut  réduction par utilisation de la règle 35 (ListExp)


État 70

    4 Instr: IF '(' Exp ')' Instr .

    $défaut  réduction par utilisation de la règle 4 (Instr)


État 71

    5 Instr: WHILE '(' Exp ')' Instr .

    $défaut  réduction par utilisation de la règle 5 (Instr)


État 72

   31 F: IDENT '(' error ')' .

    $défaut  réduction par utilisation de la règle 31 (F)


État 73

   29 F: IDENT '(' Arguments ')' .

    $défaut  réduction par utilisation de la règle 29 (F)
